--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,7 +188,7 @@ demo-buttons {padding: 1rem;}
 
 demo-buttons {cursor: pointer;}
 
-@media screen and (max-width: 600px) {
+@media (width <= 600px) {
   header label:first-of-type demo-buttons {display: none;}
 }
 
