--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,6 +142,13 @@ https://moderncss.dev/modern-css-for-dynamic-component-based-architecture/ */
       height: 100dvh; /* push HEADER/FOOTER to the top/bottom of viewport */
       overflow: hidden;
     }
+app-container::before {
+  content: "2023.07.29";
+	position: abosolute;
+	top: 1rem;
+	left: 1rem;
+	color: red;
+}
 
 /* @media (max-width: 800px) {
   app-container {
@@ -363,7 +370,7 @@ html:before {
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: 100dvh;
   z-index: -5;
   background: var(--bg-grd);
 }
@@ -373,7 +380,7 @@ body:before {
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: 100dvh;
   background-attachment: initial;
   background-color: transparent;
   background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/pattern.png');
@@ -388,7 +395,7 @@ html:after {
   left: 0;
   right: 0;
   z-index: -10;
-  height: 100vh;
+  height: 100dvh;
   background-color: rgba(var(--bg-02-color), var(--bg-02-opacity));
   background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/logo.svg');
   background-repeat: no-repeat;
