--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,7 +139,14 @@ https://moderncss.dev/modern-css-for-dynamic-component-based-architecture/ */
       grid-template-columns: var(--app-container-grid-template-columns);
       gap: var(--grid-gap);
       padding: 1rem;
-      height: 100dvh; /* push HEADER/FOOTER to the top/bottom of viewport */
+      height: 100dvh; 
+	/*
+	doc:
+	Push HEADER/FOOTER to the top/bottom of viewport
+	Use DVH: https://twitter.com/stackblitz/status/1682403409792495617
+		 https://dvh.stackblitz.io/
+		 https://stackblitz.com/edit/dvh?file=style.css
+	*/
       overflow: hidden;
 }
 
