--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,10 @@ https://moderncss.dev/modern-css-for-dynamic-component-based-architecture/ */
       }
     }
 
+    /* Define a default variable for the message */
+    :root {
+        --support: "Your browser does not support some advanced features (':has()' is not supported).";
+    }
 
 /*  WRAPPER ----------------------------------
 */  app-container {
@@ -458,12 +462,18 @@ html:after {
       display: grid;
     }
 
-.supported {display: none;}
+    /* Use the variable for the content of the message */
+    .support {
+      display: block;
+      content: var(--support);
+    }
 
-@supports(selector(:has(+ *))) {
-  .unsupported {display: none;}
-  .supported {display: block;}
-}
+    /* Change the variable's value if ':has()' is supported */
+    @supports (selector(:has(*))) {
+      :root {
+        --support: "Great! Your browser supports advanced features (':has()' is supported).";
+      }
+    }
 
 span-bold {font-weight: 900;}
 
